--- a/_pages/en/404.md
+++ b/_pages/en/404.md
@@ -3,6 +3,8 @@ layout: single
 title: "Page Not Found"
 permalink: /404.html
 sitemap: false
+lang: en   # or 'en'
+
 ---
 
 <div class="text-center">
